# grrph

./: .gitignore  LICENSE  README.md  deploy.sh  environment.yml  pyproject.toml
grrph/: converter.py  distance.py  fast_wl.py  inductive_wl.py  kernel.py  util.py
grrph/datasets/: BRECDataset_v3.py  RIGIDDataset.py
grrph/sklearn/: ensembling.py  preprocessing.py
