[project]
name = "grrph"
version = "0.0.3"

authors = [
  { name="Pascal Welke", email="pascal.welke@tuwien.ac.at" },
]
description = "grrph -- Pascals Python Graph Library "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "networkx",
]

[tool.setuptools.package-data]
myModule = ["logprimes1.npy"]

[project.urls]
Homepage = "https://github.com/pwelke/grrph"
Issues = "https://github.com/pwelke/grrph/issues"

